Added missing imports, fixed bad variable names

--- a/Access Log Parser iPython Notebook.ipynb
+++ b/Access Log Parser iPython Notebook.ipynb
@@ -10,6 +10,8 @@
    "source": [
     "# This cell defines the read_apache_log_to_dataframe method, which accepts an opened file.  We will define the file\n",
     "#     that is being used in the next cell, and invoke this function to create our dataframe\n",
+    "import pandas as pd\n",
+    "import re\n",
     "\n",
     "def read_apache_log_to_dataframe(opened_file_to_read):\n",
     "    #If file is there, returns a dataframe composed of the lines that successfully match the access_log_regex.  If file\n",
@@ -61,7 +63,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -69,14 +71,14 @@
     "\n",
     "path = '/Users/daniel.harada/GitHub/Apache-Access-Log-Tools/Test.log'\n",
     "with open(path) as f:\n",
-    "    dataframe = read_apache_access_log_to_dataframe(f)"
+    "    data_frame = read_apache_log_to_dataframe(f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -90,13 +92,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# This cell gives a more complicated example, where we get the counts by top 10 IP address from a particular User Agent\n",
     "data_frame[data_frame['user_agent'] == '\"Mozilla/5.0 (Linux; Android 4.4.4; en-us; SAMSUNG SM-N910T Build/KTU84P) AppleWebKit/537.36 (KHTML, like Gecko) Version/2.0 Chrome/34.0.1847.76 Mobile Safari/537.36\"']['ip_address'].value_counts().head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
